tests/algorithms/x/C/graphs/bi_directional_dijkstra.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c: In function ‘pass_and_relaxation’:
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:175:40: error: request for member ‘keys’ in something not a structure or union
  175 |         Edge* __tmp0 = map_get_sl(graph.keys, graph.vals, graph.lens, graph.len, v, NULL);
      |                                        ^
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:175:52: error: request for member ‘vals’ in something not a structure or union
  175 |         Edge* __tmp0 = map_get_sl(graph.keys, graph.vals, graph.lens, graph.len, v, NULL);
      |                                                    ^
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:175:64: error: request for member ‘lens’ in something not a structure or union
  175 |         Edge* __tmp0 = map_get_sl(graph.keys, graph.vals, graph.lens, graph.len, v, NULL);
      |                                                                ^
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:175:76: error: request for member ‘len’ in something not a structure or union
  175 |         Edge* __tmp0 = map_get_sl(graph.keys, graph.vals, graph.lens, graph.len, v, NULL);
      |                                                                            ^
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:176:29: error: ‘graph_lens’ undeclared (first use in this function)
  176 |         size_t __tmp0_len = graph_lens[v];
      |                             ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:176:29: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:188:25: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  188 |                 cst_fwd[(int)(nxt)] = new_cost;
      |                         ^
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:188:24: error: subscripted value is neither array nor pointer nor vector
  188 |                 cst_fwd[(int)(nxt)] = new_cost;
      |                        ^
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:44: error: initializer element is not constant
  275 |         static void* graph_fwd_vals[22] = {graph_fwd_vals_0, graph_fwd_vals_1, graph_fwd_vals_2, graph_fwd_vals_3, graph_fwd_vals_4, graph_fwd_vals_5};
      |                                            ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:44: note: (near initialization for ‘graph_fwd_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:62: error: initializer element is not constant
  275 |         static void* graph_fwd_vals[22] = {graph_fwd_vals_0, graph_fwd_vals_1, graph_fwd_vals_2, graph_fwd_vals_3, graph_fwd_vals_4, graph_fwd_vals_5};
      |                                                              ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:62: note: (near initialization for ‘graph_fwd_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:80: error: initializer element is not constant
  275 |         static void* graph_fwd_vals[22] = {graph_fwd_vals_0, graph_fwd_vals_1, graph_fwd_vals_2, graph_fwd_vals_3, graph_fwd_vals_4, graph_fwd_vals_5};
      |                                                                                ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:80: note: (near initialization for ‘graph_fwd_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:98: error: initializer element is not constant
  275 |         static void* graph_fwd_vals[22] = {graph_fwd_vals_0, graph_fwd_vals_1, graph_fwd_vals_2, graph_fwd_vals_3, graph_fwd_vals_4, graph_fwd_vals_5};
      |                                                                                                  ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:98: note: (near initialization for ‘graph_fwd_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:116: error: initializer element is not constant
  275 |         static void* graph_fwd_vals[22] = {graph_fwd_vals_0, graph_fwd_vals_1, graph_fwd_vals_2, graph_fwd_vals_3, graph_fwd_vals_4, graph_fwd_vals_5};
      |                                                                                                                    ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:116: note: (near initialization for ‘graph_fwd_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:134: error: initializer element is not constant
  275 |         static void* graph_fwd_vals[22] = {graph_fwd_vals_0, graph_fwd_vals_1, graph_fwd_vals_2, graph_fwd_vals_3, graph_fwd_vals_4, graph_fwd_vals_5};
      |                                                                                                                                      ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:275:134: note: (near initialization for ‘graph_fwd_vals[5]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:44: error: initializer element is not constant
  286 |         static void* graph_bwd_vals[22] = {graph_bwd_vals_0, graph_bwd_vals_1, graph_bwd_vals_2, graph_bwd_vals_3, graph_bwd_vals_4, graph_bwd_vals_5};
      |                                            ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:44: note: (near initialization for ‘graph_bwd_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:62: error: initializer element is not constant
  286 |         static void* graph_bwd_vals[22] = {graph_bwd_vals_0, graph_bwd_vals_1, graph_bwd_vals_2, graph_bwd_vals_3, graph_bwd_vals_4, graph_bwd_vals_5};
      |                                                              ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:62: note: (near initialization for ‘graph_bwd_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:80: error: initializer element is not constant
  286 |         static void* graph_bwd_vals[22] = {graph_bwd_vals_0, graph_bwd_vals_1, graph_bwd_vals_2, graph_bwd_vals_3, graph_bwd_vals_4, graph_bwd_vals_5};
      |                                                                                ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:80: note: (near initialization for ‘graph_bwd_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:98: error: initializer element is not constant
  286 |         static void* graph_bwd_vals[22] = {graph_bwd_vals_0, graph_bwd_vals_1, graph_bwd_vals_2, graph_bwd_vals_3, graph_bwd_vals_4, graph_bwd_vals_5};
      |                                                                                                  ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:98: note: (near initialization for ‘graph_bwd_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:116: error: initializer element is not constant
  286 |         static void* graph_bwd_vals[22] = {graph_bwd_vals_0, graph_bwd_vals_1, graph_bwd_vals_2, graph_bwd_vals_3, graph_bwd_vals_4, graph_bwd_vals_5};
      |                                                                                                                    ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:116: note: (near initialization for ‘graph_bwd_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:134: error: initializer element is not constant
  286 |         static void* graph_bwd_vals[22] = {graph_bwd_vals_0, graph_bwd_vals_1, graph_bwd_vals_2, graph_bwd_vals_3, graph_bwd_vals_4, graph_bwd_vals_5};
      |                                                                                                                                      ^~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:286:134: note: (near initialization for ‘graph_bwd_vals[5]’)
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:290:50: error: incompatible type for argument 3 of ‘bidirectional_dij’
  290 |         puts(str_int(bidirectional_dij("E", "F", graph_fwd, graph_bwd)));
      |                                                  ^~~~~~~~~
      |                                                  |
      |                                                  MapSL
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:202:78: note: expected ‘int’ but argument is of type ‘MapSL’
  202 | long long bidirectional_dij(const char* source, const char* destination, int graph_forward, int graph_backward) {
      |                                                                          ~~~~^~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:290:61: error: incompatible type for argument 4 of ‘bidirectional_dij’
  290 |         puts(str_int(bidirectional_dij("E", "F", graph_fwd, graph_bwd)));
      |                                                             ^~~~~~~~~
      |                                                             |
      |                                                             MapSL
/workspace/mochi/tests/algorithms/x/C/graphs/bi_directional_dijkstra.c:202:97: note: expected ‘int’ but argument is of type ‘MapSL’
  202 | long long bidirectional_dij(const char* source, const char* destination, int graph_forward, int graph_backward) {
      |                                                                                             ~~~~^~~~~~~~~~~~~~
